add new seed dropdown and new copy multiple